src/objects/sma__MALayer__c.object
<CustomObject>
    <fields>
        <fullName>sma__ArcGISWebMapC2C__c</fullName>
        <label>ArcGIS WebMap Click2Create</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__ArcGIS_WebMap_Click2Create__c</fullName>
        <label>ArcGIS WebMap Click2Create</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__EmailOnAggregationSuccess__c</fullName>
        <label>Email On Aggregation Success</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Layers</relationshipLabel>
        <relationshipName>MapAnything_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <inlineHelpText>Used to store the layer&apos;s options in a JSON format.</inlineHelpText>
        <label>Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <inlineHelpText>Used to determine what layer type the record represents.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data Layer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated if directly under a user&apos;s personal folder, otherwise blank. If blank and the folder lookup is blank this will appear on the corporate folder. If the folder is filled out it could be a personal or corporate folder.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnything_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MapAnything Layer</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sma__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sma__ArcGIS_Layers</fullName>
        <columns>NAME</columns>
        <columns>sma__Folder__c</columns>
        <columns>sma__Description__c</columns>
        <columns>sma__Options__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sma__Type__c</field>
            <operation>equals</operation>
            <value>ArcGIS Online</value>
        </filters>
        <label>ArcGIS Layers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>